@@ -1,8 +1,4 @@
-# $Author$
-# $Date$
-# $Revision$
-
-#    Copyright (c) 2008-2010 Dominique Dumont.
+#    Copyright (c) 2008-2011 Dominique Dumont.
 #
 #    This file is part of Config-Model-Backend-Augead.
 #
@@ -41,7 +37,7 @@ my $build = Module::Build->new
 		      'Log::Log4perl'     => '1.11', # for TRACE log level
 		      'Exception::Class'  => 0,
 		      'Config::Augeas' => '0.303',
-		      'Config::Model'  => '1.207',
+		      'Config::Model'  => '1.236',
 		     },
    build_requires => {
 		      'Test::More'        => 0,
